--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -7,11 +7,8 @@
       <h2>Welcome to <strong>XmlFly</strong></h2>
       <p>
         XmlFly is an
-        <a href="https://en.wikipedia.org/wiki/XML" target="_blank"
-          >XML
-          <svg class="bi" fill="currentColor">
-            <use xlink:href="assets/icons/bootstrap-icons.svg#box-arrow-up-right" />
-          </svg>
+        <a href="https://en.wikipedia.org/wiki/XML" target="_blank">XML
+          <fa-icon [icon]="icons.faExternalLinkAlt"></fa-icon>
         </a>
         document viewer.<br />
         To start, open an existing XML document:
@@ -23,11 +20,8 @@
       </ul>
       <p>
         Checkout the project page on
-        <a href="https://github.com/mschn/xml-fly" target="_blank"
-          >github.com
-          <svg class="bi" fill="currentColor">
-            <use xlink:href="assets/icons/bootstrap-icons.svg#box-arrow-up-right" />
-          </svg>
+        <a href="https://github.com/mschn/xml-fly" target="_blank">github.com
+          <fa-icon [icon]="icons.faExternalLinkAlt"></fa-icon>
         </a>
       </p>
     </div>
