--- a/src/app/xml-view/array/array.component.scss
+++ b/src/app/xml-view/array/array.component.scss
@@ -63,10 +63,10 @@
                 padding: 0;
 
                 &.empty-cell {
-                  // text-align: center;
-
-                  svg {
+                  fa-icon {
                     color: grey;
+                    margin: .3rem 0 0 .3rem;
+                    display: block;
                   }
                 }
             }
@@ -81,14 +81,9 @@
         line-height: 1;
         padding: 0;
 
-        svg {
+        fa-icon {
           color: white;
+          margin: 0.3rem;
         }
     }
-}
-
-svg {
-  width: 1rem;
-  height: 1rem;
-  margin: .3rem;
 }
