--- a/src/app/xml-view/node/node.component.scss
+++ b/src/app/xml-view/node/node.component.scss
@@ -10,10 +10,8 @@
     line-height: 1;
     padding: 0;
 
-    svg {
+    fa-icon {
       color: white;
-      width: 0.9rem;
-      height: 0.9rem;
       margin: 0.3rem;
     }
   }
