feat: xml parsing in web worker #22

--- a/src/app/xml-view/array/array.component.html
+++ b/src/app/xml-view/array/array.component.html
@@ -50,7 +50,7 @@
                 </div>
               </td>
               <td *ngIf="!attr" class="empty-cell">
-                <fa-icon [icon]="icons.faEllipsisH"></fa-icon>
+                <fa-icon [icon]="icons.faTimesCircle"></fa-icon>
               </td>
             </ng-container>
 
@@ -64,7 +64,7 @@
                 </ng-container>
               </td>
               <td *ngIf="!childNodes" class="empty-cell">
-                <fa-icon [icon]="icons.faEllipsisH"></fa-icon>
+                <fa-icon [icon]="icons.faTimesCircle"></fa-icon>
               </td>
             </ng-container>
           </ng-container>
