--- a/src/app/xml-view/node/node.component.scss
+++ b/src/app/xml-view/node/node.component.scss
@@ -70,6 +70,10 @@
     }
   }
 
+  &.text-node.noTagName > .header.selected > .value {
+    border-radius: 5px;
+  }
+
   .attr {
     .selected {
       & > .attr-name {
