feat: highlight node #23

--- a/src/app/colors.scss
+++ b/src/app/colors.scss
@@ -5,7 +5,11 @@ $attr-col: #9bd7ef;
 $attr-val-col: orange;
 $text-col: #d4d4d4;
 $array-col: #3a3a3a;
-$selected-bg-col: #3f3f54;
+$selected-array-col: #484848;
+$selected-bg-col: #3a414a;
 $left-bar-bg-col: #444444;
 $left-bar-border-col: #616161;
 $link-color: #859aff;
+$highlight-border: 1px solid #4e4039;
+$highlight-bg-col: #252d2f;
+$highlight-head-bg-col: #ce4d10;
