--- a/src/app/xml-view/node/node.component.html
+++ b/src/app/xml-view/node/node.component.html
@@ -7,8 +7,14 @@
   (click)="onNodeClick($event, node)"
   class="node"
   [attr.data-node]="node.name"
+  [class.selected]="node.selected && node.selection.type === 'Node'"
+  [class.highlighted]="hasNodeHighlight(node)"
 >
-  <div class="header d-flex flex-row" [class.selected]="selected && !selectedAttr">
+  <div *ngIf="hasNodeHighlight(node)" class="highlight-text">
+    <fa-icon class="align-top mt-2 mr-2" size="lg" [icon]="icons.faHighlighter"></fa-icon>
+    <div class="d-inline-block input" role="textbox" contenteditable [textContent]="node.highlights.node" (focusout)="highlightFocusOut($event, node)"></div>
+  </div>
+  <div class="header d-flex flex-row">
     <!-- expand / collapse button -->
     <ng-container *ngIf="!node.isText">
       <button class="btn btn-sm" [hidden]="!node.collapsed" (click)="show($event)">
@@ -29,16 +35,26 @@
   </div>
 
   <!-- attributes -->
-  <div class="pl-4 attr" [hidden]="node.collapsed" *ngFor="let attr of getAttributes()">
+  <div class="pl-4 attr" [hidden]="node.collapsed && !node.isText" *ngFor="let attr of getAttributes()">
     <div
-      class="node d-flex flex-row"
-      [class.selected]="selected && selectedAttr === attr"
+      class="d-inline-block"
+      [class.selected]="node.selected && node.selection.attr === attr"
       (click)="onAttrClick($event, attr, node)"
+      [class.highlighted]="hasAttrHighlight(node, attr)"
     >
+    <div *ngIf="hasAttrHighlight(node, attr)" class="highlight-text">
+      <fa-icon class="align-top mt-2 mr-2" size="lg"  [icon]="icons.faHighlighter"></fa-icon>
+      <div class="d-inline-block input" role="textbox" contenteditable [textContent]="node.highlights.attrs[attr.name]" (focusout)="highlightFocusAttrOut($event, node, attr)"></div>
+    </div>
+
+    <div class="d-flex flex-row">
       <div class="attr-name p-1 indent-node">{{ attr.name }} <span class="equals">=</span></div>
-      <div class="attr-value p-1 pl-0">
+      <div class="attr-value p-1 pl-0 flex-fill">
         {{ attr.value }}
       </div>
+
+    </div>
+
     </div>
   </div>
 
