--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -23,4 +23,10 @@
     [disabled]="!selectedFile">
     <fa-icon [icon]="icons.faMinusSquare" size="2x"></fa-icon>
   </button>
+  <button class="btn btn-sm btn-outline-secondary border-0 mb-2" (click)="highlight()" ngbTooltip="Highlight selection"
+    [disabled]="!selectedFile">
+    <fa-icon [icon]="icons.faHighlighter" size="2x"></fa-icon>
+  </button>
+
+
 </div>
