--- a/src/app/xml-view/xml-view.component.html
+++ b/src/app/xml-view/xml-view.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-column h-100">
-  <app-node class="flex-grow-1 overflow-auto" [node]="file.tree"></app-node>
+  <app-node class="flex-grow-1 overflow-auto pr-2" [node]="file.tree"></app-node>
   <app-selection [node]="file"></app-selection>
 </div>
 
