--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,25 +1,35 @@
-<div *ngIf="searchVisible" class="main form-row">
-    <div class="col">
-        <div class="input-group p-1">
-            <input type="text" class="form-control search-input" 
-                (keyup.enter)="doSearch()" #searchBox
-                [(ngModel)]="searchText" placeholder="Search...">
-            <div class="input-group-append mr-auto">
-                <button class="btn btn-outline-secondary" type="button" (click)="doSearch()">Search</button>
-            </div>
-            <button class="btn btn-dark" (click)="close()">X</button>
-        </div>
+<div class="main">
+  <div class="form-inline m-1">
+    <input
+      type="text"
+      class="form-control search-input mx-1 mousetrap"
+      (keyup)="onEnter($event)"
+      (change)="searchDone = false"
+      #searchBox
+      [(ngModel)]="file.searchText"
+      placeholder="Search..."
+      autofocus
+    />
+    <button class="btn btn-outline-secondary border-0 text-light mr-1" type="button" (click)="doSearch()">
+      <fa-icon [icon]="icons.faSearch"></fa-icon>
+    </button>
+
+    <div *ngIf="file?.searchResults?.length > 0" class="my-1">
+      <button class="btn btn-small btn-outline-secondary border-0 text-light mr-1" type="button" (click)="prevResult()">
+        <fa-icon [icon]="icons.faChevronLeft"></fa-icon>
+      </button>
+      <button class="btn btn-small btn-outline-secondary border-0 text-light" type="button" (click)="nextResult()">
+        <fa-icon [icon]="icons.faChevronRight"></fa-icon>
+      </button>
     </div>
-    <div class="col-auto">
-        <div *ngIf="searchResults && searchResults.length === 0">
-                Not found.
-        </div>
-        <div *ngIf="searchResults && searchResults.length > 0" class="my-1">
-            <button class="btn btn-small btn-outline-secondary mr-1" type="button" (click)="prevResult()">Prev</button>
-            <button class="btn btn-small btn-outline-secondary" type="button" (click)="nextResult()">Next</button>
-            <span class="ml-1">
-                {{ currentResult + 1 }} of {{ searchResults.length }}
-            </span>    
-        </div>
-    </div>
+
+    <button class="btn btn-outline-secondary border-0 text-light m-1" (click)="close()">
+      <fa-icon [icon]="icons.faTimes"></fa-icon>
+    </button>
+  </div>
+
+  <div *ngIf="searchDone && file?.searchResults?.length === 0" class="m-1 ml-2">Not found.</div>
+  <div *ngIf="file?.searchResults?.length > 0" class="m-1">
+    <span class="ml-1"> Result {{ currentResult + 1 }} of {{ file.searchResults.length }} </span>
+  </div>
 </div>
